force-app/main/default/objects/ExpReportsListing__c/ExpReportsListing__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Listing of ECM Reports by object. Used by the ExpStatusBar.</description>
    <label>ExP Reports Listing</label>
</CustomObject>