force-app/main/default/objects/ExpReportsListing__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether the report is active and if it should be included in the Report Listing.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>