force-app/main/default/objects/ExpReportsListing__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <description>Applicable only to Case_Record__c reports. Specifies the program that this report applies to.</description>
    <inlineHelpText>Applicable only to Case_Record__c reports. Specifies the program that this report applies to.</inlineHelpText>
    <label>Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>