force-app/main/default/objects/ExpReportsListing__c/fields/Report_URL__c.field-meta.xml
<CustomField>
    <fullName>Report_URL__c</fullName>
    <inlineHelpText>Example: 9A98A0001xUI87xy?pv0={!Case_Record__c.Id}&amp;pv1={!Case_Record__c.ProgramId__c}</inlineHelpText>
    <label>Report URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>