force-app/main/default/objects/ExpReportsListing__c/fields/sObjectName__c.field-meta.xml
<CustomField>
    <fullName>sObjectName__c</fullName>
    <inlineHelpText>Case_Record__c, Contact, Client_Household__c</inlineHelpText>
    <label>sObjectName</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>