force-app/main/default/objects/ExpReportsListing__c/listViews/All_with_Details.listView-meta.xml
<ListView>
    <fullName>All_with_Details</fullName>
    <columns>NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Program_Name__c</columns>
    <columns>Report_URL__c</columns>
    <columns>sObjectName__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All with Details</label>
    <language>en_US</language>
</ListView>